# hongBoard

./: CMakeCache.txt  CMakeLists.txt  ReadMe
SI/Untitled Project.si4project/: Untitled Project.sip_xab  Untitled Project.sip_xad  Untitled Project.sip_xc  Untitled Project.sip_xf  Untitled Project.sip_xm  Untitled Project.sip_xr  Untitled Project.sip_xsb  Untitled Project.sip_xsd  Untitled Project.siproj
src/: CMakeLists.txt  main.cpp  main.h
src/ap/: ap.cpp  ap.h  ap_def.h
src/ap/include/: EthernetManager.hpp  EventSocket.hpp  can_driver.h  cmd_boot.h
src/ap/src/: EthernetManager.cpp  EventSocket.cpp  can_driver.cpp  cmd_boot.cpp
src/bsp/: bsp.c  bsp.h
src/bsp/ldscript/: pico_flash.ld
src/bsp/rtos/: FreeRTOSConfig.h  rtos.h
src/common/: def.h  err_code.h
src/common/core/: qbuffer.c  qbuffer.h  util.c  util.h
src/common/hw/include/: cli.h  cmd_can.h  flash.h  i2c.h  led.h  reset.h  uart.h
src/hw/: hw.c  hw.h  hw_def.h
src/hw/driver/: cli.c  cmd_can.c  flash.c  i2c.c  led.c  reset.c  uart.c
src/lib/RP2040-HAT-C/port/ioLibrary_Driver/: w5x00_spi.c
tools/: rp2040_fw.uf2
